--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -710,54 +710,70 @@
   abstract = {Facial expressions play an important role in communication, especially in sign languages. Linguistic analysis of the exact contribution of facial expressions, as well as the creation of realistic conversational avatars, especially sign language avatars, requires accurate measurements of the facial expressions of humans while engaged in linguistic interaction. Several recent projects have employed a TrueDepth camera to make such measurements. The present paper investigates how reliable this technique is. In particular, we consider the extent to which the obtained measurements are affected by the angle between the camera and the face. Overall, we find that there are generally significant, and often rather substantial differences between measurements from different angles. However, when the measured facial features are highly activated, measurements from different angles are generally strongly correlated.}
 }
 
-@unpublished{esselink:23c,
-  author = {Esselink, Lyke and Roelofsen, Floris and Oomen, Marloes},
-  title = {Exploring new methods for measuring, analyzing, and visualizing facial expressions},
-  year = {2023},
+@article{esselink:23c, 
+  author={Esselink, Lyke and Marloes, Oomen and Floris, Roelofsen}, 
+  title={Exploring new methods for measuring, analyzing, and visualizing facial expressions}, 
+  journal={FEAST. Formal and Experimental Advances in Sign language Theory}, 
+  volume={5}, 
+  url={https://raco.cat/index.php/FEAST/article/view/422433}, 
+  DOI={10.31009/FEAST.i5.04}, 
+  year={2023}, 
+  pages={35-48},
   keywords = {Facial expressions, Depth-sensing cameras, Clustering, Visualization},
-  url = {https://www.signlab-amsterdam.nl/publications/FEAST_methods_measuring_analyzing_visualizing_facial_expressions.pdf},
-  abstract = {We explore new methods for measuring, analyzing, and visualizing facial expressions and demonstrate the utility of these methods in a case study on polar questions in Sign Language of the Netherlands.},
-  note = {Publication forthcoming in FEAST 2023 proceedings.}
+  abstract = {We explore new methods for measuring, analyzing, and visualizing facial expressions and demonstrate the utility of these methods in a case study on polar questions in Sign Language of the Netherlands.}
 }
 
-@unpublished{esselink:23d,
-  author = {Esselink, Lyke and Roelofsen, Floris and Dotla{\v{c}}il, Jakub and Mende-Gillings, Shani and Meulder, Maartje de and Sijm, Nienke and Smeijers, Anika},
-  title = {Exploring automatic text-to-sign translation in a healthcare setting},
-  year =      {2023},
-  keywords = {manuscript},
-  url = {https://www.signlab-amsterdam.nl/publications/Esselink22.pdf},
-  abstract = {Communication between healthcare professionals and deaf patients has been particularly challenging during the COVID-19 pandemic. We have explored the possibility to automatically translate phrases that are frequently used in the diagnosis and treatment of hospital patients, in particular phrases related to COVID-19, from Dutch or English to Dutch Sign Language (NGT). The prototype system we developed displays translations either by means of pre-recorded videos featuring a deaf human signer (for a limited number of sentences) or by means of animations featuring a computer-generated signing avatar (for a larger, though still restricted number of sentences). We evaluated the comprehensibility of the signing avatar, as compared to the human signer. We found that, while individual signs are recognized correctly when signed by the avatar almost as frequently as when signed by a human, sentence comprehension rates and clarity scores for the avatar are substantially lower than for the human signer. We identify a number of concrete limitations of the JAsigning avatar engine that underlies our system. Namely, the engine currently does not offer sufficient control over mouth shapes, the relative speed and intensity of signs in a sentence (prosody), and transitions between signs. These limitations need to be overcome in future work for the engine to become usable in practice.},
-  note = {Publication forthcoming in Universal Access in the Information Society.}
+@article{esselink:23d,
+  title={Exploring automatic text-to-sign translation in a healthcare setting},
+  author={Esselink, Lyke and Roelofsen, Floris and Dotla{\v{c}}il, Jakub and Mende-Gillings, Shani and de Meulder, Maartje and Sijm, Nienke and Smeijers, Anika},
+  journal={Universal Access in the Information Society},
+  pages={1--23},
+  year={2023},
+  publisher={Springer},
+  doi = {10.1007/s10209-023-01042-6},
+  keywords ={Access to healthcare information, sign language, avatar technology, user study},
+  abstract = {Communication between healthcare professionals and deaf patients has been particularly challenging during the COVID-19 pandemic. We have explored the possibility to automatically translate phrases that are frequently used in the diagnosis and treatment of hospital patients, in particular phrases related to COVID-19, from Dutch or English to Dutch Sign Language (NGT). The prototype system we developed displays translations either by means of pre-recorded videos featuring a deaf human signer (for a limited number of sentences) or by means of animations featuring a computer-generated signing avatar (for a larger, though still restricted number of sentences). We evaluated the comprehensibility of the signing avatar, as compared to the human signer. We found that, while individual signs are recognized correctly when signed by the avatar almost as frequently as when signed by a human, sentence comprehension rates and clarity scores for the avatar are substantially lower than for the human signer. We identify a number of concrete limitations of the JAsigning avatar engine that underlies our system. Namely, the engine currently does not offer sufficient control over mouth shapes, the relative speed and intensity of signs in a sentence (prosody), and transitions between signs. These limitations need to be overcome in future work for the engine to become usable in practice.}
 }
 
-@unpublished{oomen:23a,
-  author = {Oomen, Marloes and Roelofsen, Floris},
-  title = {Biased polar question forms in Sign Language of the Netherlands (NGT): Two functions of headshake},
-  year = {2023},
+@article{oomen:23a, 
+  author={Oomen, Marloes and Floris, Roelofsen}, 
+  title={Biased polar question forms in Sign Language of the Netherlands (NGT)}, 
+  journal={FEAST. Formal and Experimental Advances in Sign language Theory}, 
+  volume={5}, 
+  url={https://raco.cat/index.php/FEAST/article/view/422450}, 
+  DOI={10.31009/FEAST.i5.13}, 
+  year={2023}, 
+  pages={156-168},
   keywords = {Sign Language of the Netherlands (NGT), polar questions, bias, headshake},
-  url = {https://www.signlab-amsterdam.nl/publications/FEAST_2023_headshake_in_biased_polar_questions_in_NGT.pdf},
-  abstract = {We identify several polar question forms in Sign Language of the Netherlands (NGT) through a production experiment in which we manipulate two types of biases: (i) the prior expectations of the person asking the question, and (ii) the evidence available in the immediate context of utterance. Our analysis in the present paper focuses on forms involving headshake. We find that in some cases headshake expresses negation, as ex- pected, but in other cases it fulfils another function, namely, it is part of a sentence-final phrase either expressing uncertainty or signalling a request for a response from the ad- dressee, or possibly both at the same time. We further observe that each question form has a distinct ‘bias profile’, indicating a certain combination of prior expectations and contextual evidence. Besides these empirical findings, our study also makes a method- ological contribution: our experimental design could be used in future work to identify polar question forms with different bias profiles in sign languages other than NGT, as well as visual cues accompanying polar questions with different bias profiles in spoken languages.},
-  note = {Publication forthcoming in FEAST 2023 proceedings.}
+  abstract = {We identify several polar question forms in Sign Language of the Netherlands (NGT) through a production experiment in which we manipulate two types of biases: (i) the prior expectations of the person asking the question, and (ii) the evidence available in the immediate context of utterance. Our analysis in the present paper focuses on forms involving headshake. We find that in some cases headshake expresses negation, as ex- pected, but in other cases it fulfils another function, namely, it is part of a sentence-final phrase either expressing uncertainty or signalling a request for a response from the ad- dressee, or possibly both at the same time. We further observe that each question form has a distinct ‘bias profile’, indicating a certain combination of prior expectations and contextual evidence. Besides these empirical findings, our study also makes a method- ological contribution: our experimental design could be used in future work to identify polar question forms with different bias profiles in sign languages other than NGT, as well as visual cues accompanying polar questions with different bias profiles in spoken languages.}
 }
 
-@incollection{oomen:23b,
-    author =    {Marloes Oomen and Lyke Esselink and Tobias de Ronde and Floris Roelofsen},
-    year =      {2023},
-    title =     {First steps towards a procedure for annotating non-manual markers in sign languages},
-    booktitle = {Proceedings of the Fifty-Third Annual Meeting of the North East Linguistic Society},
-    editor =    {Suet-Ying Lam and Satoru Ozaki},
+@inproceedings{oomen:23b, 
+    author = {Marloes Oomen and Lyke Esselink and {de Ronde}, Tobias. and Floris Roelofsen}, 
+    year = {2023}, 
+    title = {First Steps Towards a Procedure for Annotating Non-Manual Markers in Sign Languages},
+    language = {English}, 
+    isbn = {9798869982261}, 
+    volume = {2}, 
+    pages = {257--266}, 
+    editor = {S.-Y. Lam and S. Ozaki}, 
+    booktitle = {NELS 53: Proceedings of the Fifty-Third Annual Meeting of the North East Linguistic Society}, 
+    publisher = {GLSA},
     url = {https://www.signlab-amsterdam.nl/publications/NELS53_Proceedings_Oomen.pdf},
     abstract = {We report on the development, application, and evaluation of a procedure for annotating non-manual markers (NMM) in experimentally obtained sign language data. We also share resources to enable other researchers investigating NMM in sign languages or multimodal communication to utilize the annotation protocol we developed in their own research.}
 }
 
-@unpublished{oomen:23c,
-  author = {Oomen, Marloes and Santoro, Mirko and Geraci, Carlo},
-  title = {Some properties of Neg-raising in three sign languages},
-  year = {2023},
-  url = {https://www.signlab-amsterdam.nl/publications/FEAST_2023_Neg_raising_in_three_sign_languages.pdf},
+@article{oomen:23c, 
+  author={Oomen, Marloes and Mirko, Santoro and Carlo, Geraci},
+  title={Some properties of neg-raising in three sign languages}, 
+  journal={FEAST. Formal and Experimental Advances in Sign language Theory}, 
+  volume={5}, 
+  url={https://raco.cat/index.php/FEAST/article/view/422449}, 
+  DOI={10.31009/FEAST.i5.12}, 
+  year={2023}, 
+  pages={145-155},
   keywords = {Neg-raising, Negative Polarity Items, Negative quantifiers, Headshake},
-  abstract = {Neg-raising, the phenomenon whereby a negation in the main clause of a complex construction is interpreted as if belonging to the embedded clause, has been intensively studied in spoken languages. The same cannot be said for sign languages. In this paper, we investigate the properties of Neg-raising constructions in three sign languages: French Sign Language, Italian Sign Language, and Sign Language of the Netherlands. We report on two syntactic tests we applied to disambiguate Neg-raising and non-Neg-raising readings, showing that Neg-raising constructions have similar properties in the three sign languages that we studied, as well as in comparable constructions in spoken languages. We also discuss some intricate headshake spreading patterns we found in Neg-raising constructions in Sign Language of the Netherlands, a non-manual dominant sign language.},
-  note = {Publication forthcoming in FEAST 2023 proceedings.}
+  abstract = {Neg-raising, the phenomenon whereby a negation in the main clause of a complex construction is interpreted as if belonging to the embedded clause, has been intensively studied in spoken languages. The same cannot be said for sign languages. In this paper, we investigate the properties of Neg-raising constructions in three sign languages: French Sign Language, Italian Sign Language, and Sign Language of the Netherlands. We report on two syntactic tests we applied to disambiguate Neg-raising and non-Neg-raising readings, showing that Neg-raising constructions have similar properties in the three sign languages that we studied, as well as in comparable constructions in spoken languages. We also discuss some intricate headshake spreading patterns we found in Neg-raising constructions in Sign Language of the Netherlands, a non-manual dominant sign language.}
 }
 
 @inproceedings{neijman:22,
