update publications Roland

--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -21,6 +21,46 @@
   abstract = {This article reports the results of the first longitudinal study that systematically investigates the acquisition of verb agreement by hearing learners of a sign language. During a 2-year period, 14 novel learners of Sign Language of the Netherlands (NGT) with a spoken language background performed an elicitation task 15 times. Seven deaf native signers and NGT teachers performed the same task to serve as a benchmark group. The results obtained show that for some learners, the verb agreement system of NGT was difficult to master, despite numerous examples in the input. As compared to the benchmark group, learners tended to omit agreement markers on verbs that could be modified, did not always correctly use established locations associated with discourse referents, and made characteristic errors with respect to properties that are important in the expression of agreement (movement and orientation). The outcomes of the study are of value to practitioners in the field, as they are informative with regard to the nature of the learning process during the first stages of learning a sign language.}
 }
 
+@incollection{Kimmelman:24,
+  title = {{Headshakes in NGT: Relation between phonetic properties & linguistic function}},
+  author = {Kimmelman, Vadim & Oomen, Marloes & Pfau, Roland},
+  publisher={ELRA Language Resources Association},
+  editor    = {Efthimiou, Eleni and Fotinea, Stavroula-Evita and Hanke, Thomas and Hochgesang, Julie A. and Mesch, Johanna and Schulder, Marc},
+  booktitle = {Proceedings of the {LREC-COLING} 2024 11th Workshop on the Representation and Processing of Sign Languages: Evaluation of Sign Language Resources},
+  maintitle = {2024 Joint International Conference on Computational Linguistics, Language Resources and Evaluation ({LREC-COLING} 2024)},
+  pages = {62--70},
+  address   = {Torino, Italy},
+  year = {2024},
+  url = {https://www.sign-lang.uni-hamburg.de/lrec/pub/24008.pdf},
+  abstract = {Non-manual markers (such as facial expressions and head movements) have been shown to fulfil a wide range of grammatical functions across sign languages. One nonmanual marker that is very wide-spread is headshake used to express negation. While negation and headshake have been studied for a variety of sign languages, phonetic/kinematic research on headshake has been mostly absent. In this paper, we conduct a phonetic analysis of headshake in Sign Language of the Netherlands using a Computer Vision solution, namely OpenFace. We specifically analyze whether linguistic properties of headshake (e.g. spreading and the type of signs co-occurring with the headshake) influence its phonetic form.}
+}
+
+@article{pfau:24a,
+  title = {When shifts root: Some observations regarding nouns and noun phrases in spontaneous speech errors},
+  author = {Pfau, Rolabd},
+  journal = {Linguistics in Amsterdam},
+  volume = {15},
+  number = {2},
+  pages = {135--142},
+  year = {2024},
+  url = {https://www.signlab-amsterdam.nl/publications/Pfau_2024_LiA.pdf},
+  abstract = {Deciding on a topic for my contribution to this festschrift did not come easy. The obvious choice would have been a topic related to sign language structure – and indeed, I reviewed a couple of ideas. However, given that this volume celebrates Kees Hengeveld’s academic achievements – and, on a more personal note, the wonderful and supportive colleague he has been for almost a quarter of a century – I finally decided to contribute a squib on the manipulation of nouns in spontaneous speech errors, as this topic has three straightforward links to studies that Kees has conducted over the years. First, I am focusing on a specific word class (and the nature of word classes more generally), and ever since his PhD thesis, Kees has had a keen interest in parts-of-speech (Hengeveld 1992; also see, e.g., Hengeveld 2013). Second, I discuss production data, and the Functional Discourse Grammar (FDG) model is characterized by a rigorous top- down architecture (Hengeveld & Mackenzie 2015), which aligns in important ways with that of serial models of language production (e.g., Levelt 1989). Third, on my only foray into the realm of (pre-FDG) Functional Grammar – a joint project with Dik Bakker – we actually addressed gender mismatches in spontaneous speech errors (Bakker & Pfau 2008). In this squib, I will analyze selected German speech errors by applying theoretical assumptions from Distributed Morphology (DM; Halle & Marantz 1993; Siddiqi 2010). In a nutshell, DM assumes that the computational system manipulates nothing but abstract roots and morphosyntactic features, while phonologically specified Vocabulary items (VIs) are inserted into terminal nodes only after syntax (“late insertion”). In Section 2, I will focus on roots and show how DM-mechanisms ensure their correct spell-out in a specific context. In Sections 3 and 4, I then turn to proposals regarding the internal structure of determiner phrases (DPs) and consider in how far the speech error data provide evidence regarding such proposals. I address certain predictions concerning the processing of the number feature (Section 3) and further functional structure that may impact the choice of derivational morphemes (Section 4).}
+}
+
+@article{pfau:24b,
+  title = {Suprasegmentals in negation: A cross-modal perspective},
+  author = {Pfau, Rolabd},
+  journal = {To the left, to the right, and much in between: A Festschrift for Katharina Hartmann},
+  publisher = {Goethe University Frankfurt},
+  editor = {Himmelreich, A. & Hole, D. & Mursell, J.},
+  pages = {127--138},
+  year = {2024},
+  url = {https://www.signlab-amsterdam.nl/publications/Pfau_KH.pdf},
+  doi = {10.17605/OSF.IO/3FX4M},
+  abstract = {Katharina Hartmann, whose academic achievements are celebrated with this volume, and I have a 30-year-long history of non-linguistic and linguistic interaction. We shared an apartment in Frankfurt for five years in the 1990s while we were both affiliated with the University of Frankfurt (she as PhD, then post-doc, and I as PhD). In retrospect, it seems to me that our conversations at home only rarely revolved around linguistic matters – except for the occasional gossip, of course. Yet, there has been a noteworthy, and coincidental, overlap in research focus in the late 1990s, and it is this incident that served as inspiration for my contribution to the volume. In that period, Katharina and I had both decided to extend the scope of our linguistic interests by learning an “exotic” language: she chose Hausa, while I took advantage of the fact that German Sign Language (Deutsche Gebärden-sprache, DGS) was offered for the first time at our university. Once we had acquired basic skills, it just so happened that both of us – independently of each other – selected the realization of negation in the respective language as topic of investigation. We noticed certain similarities between the two languages, which, in an odd sense of circularity, made her reference unpublished work of mine in a talk (Hartmann 1999), while I referred to that very talk in the published version of the chapter she had drawn information from (Pfau 2001).
+  In the present chapter, I zoom in on a characteristic that the two (and many other) languages share, but which has not been discussed in much detail in the aforementioned works: the role of suprasegmentals in the expression of negation. In Section 2, I start by sketching selected properties and functions of suprasegmentals in the two modalities.2 Section 3 addresses negative particles that are specified for suprasegmental features, while Section 4 looks at verbs and how they may be suprasegmentally modified in negative contexts. The possibility of spreading of suprasegmental features is discussed in Section 5. Section 6 concludes.}
+}
+
 @incollection{pfau:23,
   title = {Morphology in sign languages: Theoretical issues and typological contrasts.},
   author = {Pfau, Roland and Steinbach, Markus},
