Update publications Jos

--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -1,3 +1,21 @@
+@inproceedings{ritmeester:24, 
+  author = {Ritmeester, Jos and S\"{u}mer, Beyza and Boonstra, Marije and de Meulder, Maartje and van der Aa, Belinda and Roelofsen, Floris}, 
+  title = {{ZINinNGT: A Mobile Tool to Aid Hearing Parents Learning Dutch Sign Language}}, 
+  year = {2024}, 
+  isbn = {9798400706776}, 
+  publisher = {Association for Computing Machinery}, 
+  address = {New York, NY, USA}, 
+  url = {https://doi.org/10.1145/3663548.3688529}, 
+  doi = {10.1145/3663548.3688529}, 
+  booktitle = {Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility}, 
+  articleno = {82}, 
+  numpages = {5}, 
+  location = {St. John's, NL, Canada}, 
+  series = {ASSETS '24},
+  abstract = {This study examines the potential of the ZINinNGT app, a mobile learning application designed to support hearing parents of deaf and hard-of-hearing (DHH) children in learning Dutch Sign Language. We conducted interviews with ten parents to investigate their current sign language learning experiences and to gather feedback on the ZINinNGT prototype. While results indicated that an app cannot overcome many of the challenges parents face, parents still expressed a very positive attitude towards using a sign language learning app. Feedback on the ZINinNGT prototype identified the need for enhanced usability and a desire to include quizzes and information on the handshapes of signs. Overall, feedback was very positive, indicating that a mobile app has the potential to support hearing parents by providing relevant content going beyond vocabulary level.}
+}
+
+
 @phdthesis{boers:21,
   title = {Learning to use space: A study into the SL2 acquisition process of adult learners of Sign Language of the Netherlands},
   author = {Boers-Visker, Eveline},
@@ -23,7 +41,7 @@
 
 @incollection{Kimmelman:24,
   title = {{Headshakes in NGT: Relation between phonetic properties & linguistic function}},
-  author = {Kimmelman, Vadim & Oomen, Marloes & Pfau, Roland},
+  author = {Kimmelman, Vadim and Oomen, Marloes and Pfau, Roland},
   publisher={ELRA Language Resources Association},
   editor    = {Efthimiou, Eleni and Fotinea, Stavroula-Evita and Hanke, Thomas and Hochgesang, Julie A. and Mesch, Johanna and Schulder, Marc},
   booktitle = {Proceedings of the {LREC-COLING} 2024 11th Workshop on the Representation and Processing of Sign Languages: Evaluation of Sign Language Resources},
@@ -37,7 +55,7 @@
 
 @article{pfau:24a,
   title = {When shifts root: Some observations regarding nouns and noun phrases in spontaneous speech errors},
-  author = {Pfau, Rolabd},
+  author = {Pfau, Roland},
   journal = {Linguistics in Amsterdam},
   volume = {15},
   number = {2},
@@ -49,10 +67,10 @@
 
 @article{pfau:24b,
   title = {Suprasegmentals in negation: A cross-modal perspective},
-  author = {Pfau, Rolabd},
+  author = {Pfau, Roland},
   journal = {To the left, to the right, and much in between: A Festschrift for Katharina Hartmann},
   publisher = {Goethe University Frankfurt},
-  editor = {Himmelreich, A. & Hole, D. & Mursell, J.},
+  editor = {Himmelreich, A. and Hole, D. and Mursell, J.},
   pages = {127--138},
   year = {2024},
   url = {https://www.signlab-amsterdam.nl/publications/Pfau_KH.pdf},
