--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -1,16 +1,26 @@
-@inproceedings{ritmeester:24, 
-  author = {Ritmeester, Jos and S\"{u}mer, Beyza and Boonstra, Marije and de Meulder, Maartje and van der Aa, Belinda and Roelofsen, Floris}, 
-  title = {{ZINinNGT: A Mobile Tool to Aid Hearing Parents Learning Dutch Sign Language}}, 
-  year = {2024}, 
-  isbn = {9798400706776}, 
-  publisher = {Association for Computing Machinery}, 
-  address = {New York, NY, USA}, 
-  url = {https://doi.org/10.1145/3663548.3688529}, 
-  doi = {10.1145/3663548.3688529}, 
-  booktitle = {Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility}, 
-  articleno = {82}, 
-  numpages = {5}, 
-  location = {St. John's, NL, Canada}, 
+@inproceedings{Notarte:23,
+  author = {Notarte Balanquit, Liberty and Dagani, Carolyn B. and Martinez, Liza L.},
+  title = {{Matapos ang Apat na Dekada: Muling pagsipat sa panganganib ng Wikang Senyas ng Pilipino [After four decades: a review of the status of FSL endangerment].}},
+  year = {2023},
+  url = {https://www.researchgate.net/publication/384729744_Matapos_ang_Apat_na_Dekada_Muling_pagsipat_sa_panganganib_ng_Wikang_Senyas_ng_Pilipino},
+  booktitle = {Pambansang Kongreso sa Nanganganib na Wika 2022 [National Congress on Endangered Languages 2022]},
+  numpages = {13},
+  location = {Manila, Philippines}
+}
+
+@inproceedings{ritmeester:24,
+  author = {Ritmeester, Jos and S\"{u}mer, Beyza and Boonstra, Marije and de Meulder, Maartje and van der Aa, Belinda and Roelofsen, Floris},
+  title = {{ZINinNGT: A Mobile Tool to Aid Hearing Parents Learning Dutch Sign Language}},
+  year = {2024},
+  isbn = {9798400706776},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/3663548.3688529},
+  doi = {10.1145/3663548.3688529},
+  booktitle = {Proceedings of the 26th International ACM SIGACCESS Conference on Computers and Accessibility},
+  articleno = {82},
+  numpages = {5},
+  location = {St. John's, NL, Canada},
   series = {ASSETS '24},
   abstract = {This study examines the potential of the ZINinNGT app, a mobile learning application designed to support hearing parents of deaf and hard-of-hearing (DHH) children in learning Dutch Sign Language. We conducted interviews with ten parents to investigate their current sign language learning experiences and to gather feedback on the ZINinNGT prototype. While results indicated that an app cannot overcome many of the challenges parents face, parents still expressed a very positive attitude towards using a sign language learning app. Feedback on the ZINinNGT prototype identified the need for enhanced usability and a desire to include quizzes and information on the handshapes of signs. Overall, feedback was very positive, indicating that a mobile app has the potential to support hearing parents by providing relevant content going beyond vocabulary level.}
 }
@@ -152,7 +162,7 @@
   doi = {https://doi.org/10.16995/glossa.9686},
   keywords = {Allomorphy, Corpus, Plural reduplication, Sign Language of the Netherlands, Stochastic OT, Variation},
   abstract = {In both signed and spoken languages, reduplication is a common process in the formation of morphologically complex structures, expressing, e.g., plurality and certain aspectual meanings. A framework in which spoken language reduplication has been formalized frequently is Optimality Theory (OT). While an important attribute of OT-constraints is their universality, to date, the question to what extent such constraints are modality-independent, and thus work for sign language reduplication as well, remains largely unanswered. In the present study, we offer the first OT-formalization of plural reduplication in Sign Language of the Netherlands (NGT). The NGT-data reveal that this language features different plural allomorphs, the choice of which depends on phonological properties of the base noun. However, we also identify variation, e.g., all noun types allow for zero marking.
-  
+
   In our formalization, we aim to introduce constraints that are maximally modality-independent, using constraint types that have previously been proposed for spoken language reduplication. Our formalization is the first to take into account base-reduplicant faithfulness for a sign language, and also the first to account for variation in sign language data by employing stochastic OT, whereby some noise is added to the ranking value of each constraint at evaluation time. Evaluating the modality-(in)dependence of our proposed account suggests that the types of constraints we employ as well as the evaluation in the spirit of stochastic OT are not specific to a modality, while the featural implementation is inevitably modality-dependent.}
 }
 
@@ -197,15 +207,15 @@
     pages = {119}
 }
 
-@article{Khristoforova:23c, 
-    title={Indexicals under role shift in Sign Language of the Netherlands}, 
-    volume={5}, 
-    url={https://raco.cat/index.php/FEAST/article/view/422436}, 
-    DOI={10.31009/FEAST.i5.06}, 
-    journal={FEAST. Formal and Experimental Advances in Sign language Theory}, 
-    author={Khristoforova, Evgeniia and David, Blunier}, 
-    year={2023}, 
-    pages={63-75} 
+@article{Khristoforova:23c,
+    title={Indexicals under role shift in Sign Language of the Netherlands},
+    volume={5},
+    url={https://raco.cat/index.php/FEAST/article/view/422436},
+    DOI={10.31009/FEAST.i5.06},
+    journal={FEAST. Formal and Experimental Advances in Sign language Theory},
+    author={Khristoforova, Evgeniia and David, Blunier},
+    year={2023},
+    pages={63-75}
 }
 
 @article{kimmelman:20,
@@ -699,8 +709,8 @@
 
 @inproceedings{hollain:23a,
   author = {Hollain, Natalie and Larson, Martha and Roelofsen, Floris},
-  booktitle={2023 IEEE International Conference on Acoustics, Speech, and Signal Processing Workshops (ICASSPW)}, 
-  title={Distractor-Based Evaluation of Sign Spotting}, 
+  booktitle={2023 IEEE International Conference on Acoustics, Speech, and Signal Processing Workshops (ICASSPW)},
+  title={Distractor-Based Evaluation of Sign Spotting},
   year={2023},
   volume={},
   number={},
@@ -730,18 +740,18 @@
   school = {Radboud University},
   year = {2023},
   url = {https://www.signlab-amsterdam.nl/publications/Natalie-Hollain-thesis.pdf},
-  abstract = {This research project carried out an initial exploration into how sign spotting, the task of detecting when a target sign occurs in a given video, can be performed in a more explainable manner. Explainability demands that a system is correct, robust and interpretable to humans [1], [2]. Inspired by domain knowledge being used to increase the explainability and interpretability of systems in other domains [3], [4], we investigate the possibility of using a knowledge-based approach for sign spotting. 
-  
-  One manner in which knowledge about sign language can be incorporated into sign language systems is through linguistic insights. Current sign spotting systems typically do not make use of such knowledge [5], thus limiting their interpretability. Similarly, evaluation methods for sign spotting do not draw on linguistic knowledge, resulting in a lack of explainability since they fail to robustly estimate model performance given an incomplete ground truth. Updates to the known ground truth, in particular the addition of challenging sign annotations, can significantly alter the estimated performance. Moreover, current evaluations do not reflect user expectations for sign spotting systems because spottings are allowed to occur after a relevant segment has already started. Users thus have to put in effort, such as rewinding the video, to watch the full relevant segment, which was found to not reflect what users expect [6]. 
-  
-  The goal of this thesis is to address these limitations using a knowledge-based approach. We incorporate linguistic knowledge about sign language into a sign spotting system and evaluation method. We aim to enhance explainability by enabling a sign spotting analysis based on linguistic insights. Furthermore, we develop linguistic features to ensure our model uses knowledge-based inputs as the basis for its decision-making. In this way, we hope to increase the explainability of current methods. 
-  
+  abstract = {This research project carried out an initial exploration into how sign spotting, the task of detecting when a target sign occurs in a given video, can be performed in a more explainable manner. Explainability demands that a system is correct, robust and interpretable to humans [1], [2]. Inspired by domain knowledge being used to increase the explainability and interpretability of systems in other domains [3], [4], we investigate the possibility of using a knowledge-based approach for sign spotting.
+
+  One manner in which knowledge about sign language can be incorporated into sign language systems is through linguistic insights. Current sign spotting systems typically do not make use of such knowledge [5], thus limiting their interpretability. Similarly, evaluation methods for sign spotting do not draw on linguistic knowledge, resulting in a lack of explainability since they fail to robustly estimate model performance given an incomplete ground truth. Updates to the known ground truth, in particular the addition of challenging sign annotations, can significantly alter the estimated performance. Moreover, current evaluations do not reflect user expectations for sign spotting systems because spottings are allowed to occur after a relevant segment has already started. Users thus have to put in effort, such as rewinding the video, to watch the full relevant segment, which was found to not reflect what users expect [6].
+
+  The goal of this thesis is to address these limitations using a knowledge-based approach. We incorporate linguistic knowledge about sign language into a sign spotting system and evaluation method. We aim to enhance explainability by enabling a sign spotting analysis based on linguistic insights. Furthermore, we develop linguistic features to ensure our model uses knowledge-based inputs as the basis for its decision-making. In this way, we hope to increase the explainability of current methods.
+
   To address the need for explainable sign spotting systems, we implemented features for a sign spotting model that approximate the basic phonological properties of signs, including handshape, orientation, location and movement [7], [8]. Our features are extracted from landmarks, which are keypoints in the body, such as the fingertips and shoulders, that we detected using a landmark detection tool. As far as we are aware, we are the first to implement a sign spotting model which extracts such features from landmarks. By taking into account the basic four phonological properties, we aim to create explainable sign representations for our model to encode. As a result, it is possible to perform a failure analysis for our model that is facilitated by the linguistic features.
-  
+
   To address the need for explainable evaluation methods for sign spotting, we developed an evaluation that is rooted in the concept of tolerance to irrelevance (TTI) [9]. TTI builds on the assumption that users, given an entry point in a video or audio stream, keep watching or listening until their tolerance to irrelevant content is reached. Through this means, our evaluation method reflects the effort it takes for users to use a sign spotting system.
-  
+
   However, TTI, like existing sign spotting evaluations, relies on a full ground truth to reliably determine a model’s performance, which may not be available for a sign spotting dataset. We address this limitation by using a novel approach that uses only the most challenging known cases to assess our model performance. These hardest cases are called distractors, which we define as those signs that are most similar to the target sign based on a distance measure. In our work, we develop a novel linguistic distance measure to determine the similarity between signs. Through the usage of these distractors, we estimate the performance for the full ground truth based solely on the hardest cases from the known ground truth, and assume that this makes our performance estimation robust to the addition of new annotations. We validated this assumption by investigating the effects of updates to the annotations on the performance estimates by our distractor-based evaluation compared to a baseline evaluation that uses random, as opposed to hard, cases. Our results show that the distractor-based evaluations provides a more conservative estimate of the performance of a model and is comparably robust to changes in the annotations compared to the baseline.
-  
+
   We validated our linguistic features using an empirical analysis, where we compared the effectiveness of a non-linguistic baseline that used landmarks directly, to a model using our more explainable, linguistically motivated features that are extracted from landmarks. Moreover, we investigated whether a combination of linguistic and baseline landmark features would result in better performance. The conditions were compared through the use of our distractor-based evaluation. We determined that the combination of the features provided the best performance at the cost of linguistic representativeness.}
 }
 
@@ -756,8 +766,8 @@
 
 @inproceedings{esselink:23b,
   author = {Esselink, Lyke and Oomen, Marloes and Roelofsen, Floris},
-  booktitle={2023 IEEE International Conference on Acoustics, Speech, and Signal Processing Workshops (ICASSPW)}, 
-  title={Truedepth Measurements of Facial Expressions: Sensitivity to the Angle Between Camera and Face}, 
+  booktitle={2023 IEEE International Conference on Acoustics, Speech, and Signal Processing Workshops (ICASSPW)},
+  title={Truedepth Measurements of Facial Expressions: Sensitivity to the Angle Between Camera and Face},
   year={2023},
   volume={},
   number={},
@@ -768,14 +778,14 @@
   abstract = {Facial expressions play an important role in communication, especially in sign languages. Linguistic analysis of the exact contribution of facial expressions, as well as the creation of realistic conversational avatars, especially sign language avatars, requires accurate measurements of the facial expressions of humans while engaged in linguistic interaction. Several recent projects have employed a TrueDepth camera to make such measurements. The present paper investigates how reliable this technique is. In particular, we consider the extent to which the obtained measurements are affected by the angle between the camera and the face. Overall, we find that there are generally significant, and often rather substantial differences between measurements from different angles. However, when the measured facial features are highly activated, measurements from different angles are generally strongly correlated.}
 }
 
-@article{esselink:23c, 
-  author={Esselink, Lyke and Marloes, Oomen and Floris, Roelofsen}, 
-  title={Exploring new methods for measuring, analyzing, and visualizing facial expressions}, 
-  journal={FEAST. Formal and Experimental Advances in Sign language Theory}, 
-  volume={5}, 
-  url={https://raco.cat/index.php/FEAST/article/view/422433}, 
-  DOI={10.31009/FEAST.i5.04}, 
-  year={2023}, 
+@article{esselink:23c,
+  author={Esselink, Lyke and Marloes, Oomen and Floris, Roelofsen},
+  title={Exploring new methods for measuring, analyzing, and visualizing facial expressions},
+  journal={FEAST. Formal and Experimental Advances in Sign language Theory},
+  volume={5},
+  url={https://raco.cat/index.php/FEAST/article/view/422433},
+  DOI={10.31009/FEAST.i5.04},
+  year={2023},
   pages={35-48},
   keywords = {Facial expressions, Depth-sensing cameras, Clustering, Visualization},
   abstract = {We explore new methods for measuring, analyzing, and visualizing facial expressions and demonstrate the utility of these methods in a case study on polar questions in Sign Language of the Netherlands.}
@@ -793,42 +803,42 @@
   abstract = {Communication between healthcare professionals and deaf patients has been particularly challenging during the COVID-19 pandemic. We have explored the possibility to automatically translate phrases that are frequently used in the diagnosis and treatment of hospital patients, in particular phrases related to COVID-19, from Dutch or English to Dutch Sign Language (NGT). The prototype system we developed displays translations either by means of pre-recorded videos featuring a deaf human signer (for a limited number of sentences) or by means of animations featuring a computer-generated signing avatar (for a larger, though still restricted number of sentences). We evaluated the comprehensibility of the signing avatar, as compared to the human signer. We found that, while individual signs are recognized correctly when signed by the avatar almost as frequently as when signed by a human, sentence comprehension rates and clarity scores for the avatar are substantially lower than for the human signer. We identify a number of concrete limitations of the JAsigning avatar engine that underlies our system. Namely, the engine currently does not offer sufficient control over mouth shapes, the relative speed and intensity of signs in a sentence (prosody), and transitions between signs. These limitations need to be overcome in future work for the engine to become usable in practice.}
 }
 
-@article{oomen:23a, 
-  author={Oomen, Marloes and Floris, Roelofsen}, 
-  title={Biased polar question forms in Sign Language of the Netherlands (NGT)}, 
-  journal={FEAST. Formal and Experimental Advances in Sign language Theory}, 
-  volume={5}, 
-  url={https://raco.cat/index.php/FEAST/article/view/422450}, 
-  DOI={10.31009/FEAST.i5.13}, 
-  year={2023}, 
+@article{oomen:23a,
+  author={Oomen, Marloes and Floris, Roelofsen},
+  title={Biased polar question forms in Sign Language of the Netherlands (NGT)},
+  journal={FEAST. Formal and Experimental Advances in Sign language Theory},
+  volume={5},
+  url={https://raco.cat/index.php/FEAST/article/view/422450},
+  DOI={10.31009/FEAST.i5.13},
+  year={2023},
   pages={156-168},
   keywords = {Sign Language of the Netherlands (NGT), polar questions, bias, headshake},
   abstract = {We identify several polar question forms in Sign Language of the Netherlands (NGT) through a production experiment in which we manipulate two types of biases: (i) the prior expectations of the person asking the question, and (ii) the evidence available in the immediate context of utterance. Our analysis in the present paper focuses on forms involving headshake. We find that in some cases headshake expresses negation, as ex- pected, but in other cases it fulfils another function, namely, it is part of a sentence-final phrase either expressing uncertainty or signalling a request for a response from the ad- dressee, or possibly both at the same time. We further observe that each question form has a distinct ‘bias profile’, indicating a certain combination of prior expectations and contextual evidence. Besides these empirical findings, our study also makes a method- ological contribution: our experimental design could be used in future work to identify polar question forms with different bias profiles in sign languages other than NGT, as well as visual cues accompanying polar questions with different bias profiles in spoken languages.}
 }
 
-@inproceedings{oomen:23b, 
-    author = {Marloes Oomen and Lyke Esselink and {de Ronde}, Tobias. and Floris Roelofsen}, 
-    year = {2023}, 
+@inproceedings{oomen:23b,
+    author = {Marloes Oomen and Lyke Esselink and {de Ronde}, Tobias. and Floris Roelofsen},
+    year = {2023},
     title = {First Steps Towards a Procedure for Annotating Non-Manual Markers in Sign Languages},
-    language = {English}, 
-    isbn = {9798869982261}, 
-    volume = {2}, 
-    pages = {257--266}, 
-    editor = {S.-Y. Lam and S. Ozaki}, 
-    booktitle = {NELS 53: Proceedings of the Fifty-Third Annual Meeting of the North East Linguistic Society}, 
+    language = {English},
+    isbn = {9798869982261},
+    volume = {2},
+    pages = {257--266},
+    editor = {S.-Y. Lam and S. Ozaki},
+    booktitle = {NELS 53: Proceedings of the Fifty-Third Annual Meeting of the North East Linguistic Society},
     publisher = {GLSA},
     url = {https://www.signlab-amsterdam.nl/publications/NELS53_Proceedings_Oomen.pdf},
     abstract = {We report on the development, application, and evaluation of a procedure for annotating non-manual markers (NMM) in experimentally obtained sign language data. We also share resources to enable other researchers investigating NMM in sign languages or multimodal communication to utilize the annotation protocol we developed in their own research.}
 }
 
-@article{oomen:23c, 
+@article{oomen:23c,
   author={Oomen, Marloes and Mirko, Santoro and Carlo, Geraci},
-  title={Some properties of neg-raising in three sign languages}, 
-  journal={FEAST. Formal and Experimental Advances in Sign language Theory}, 
-  volume={5}, 
-  url={https://raco.cat/index.php/FEAST/article/view/422449}, 
-  DOI={10.31009/FEAST.i5.12}, 
-  year={2023}, 
+  title={Some properties of neg-raising in three sign languages},
+  journal={FEAST. Formal and Experimental Advances in Sign language Theory},
+  volume={5},
+  url={https://raco.cat/index.php/FEAST/article/view/422449},
+  DOI={10.31009/FEAST.i5.12},
+  year={2023},
   pages={145-155},
   keywords = {Neg-raising, Negative Polarity Items, Negative quantifiers, Headshake},
   abstract = {Neg-raising, the phenomenon whereby a negation in the main clause of a complex construction is interpreted as if belonging to the embedded clause, has been intensively studied in spoken languages. The same cannot be said for sign languages. In this paper, we investigate the properties of Neg-raising constructions in three sign languages: French Sign Language, Italian Sign Language, and Sign Language of the Netherlands. We report on two syntactic tests we applied to disambiguate Neg-raising and non-Neg-raising readings, showing that Neg-raising constructions have similar properties in the three sign languages that we studied, as well as in comparable constructions in spoken languages. We also discuss some intricate headshake spreading patterns we found in Neg-raising constructions in Sign Language of the Netherlands, a non-manual dominant sign language.}
