update publications libby (2), forthcoming

--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -1,3 +1,12 @@
+@article{Notarte:forthcoming,
+  author = {Notarte Balanquit, Liberty},
+  title = {Probabilities of Lexicalization: phonological change in Filipino Sign Language cardinal numerals},
+  journal = {(2 ed.) Penn Working Papers in Linguistics},
+  publisher = Graduate Linguistics Society (GradLingS)
+  year = {forthcoming},
+  note = {Forthcoming}
+}
+
 @inproceedings{Notarte:23,
   author = {Notarte Balanquit, Liberty and Dagani, Carolyn B. and Martinez, Liza L.},
   title = {{Matapos ang Apat na Dekada: Muling pagsipat sa panganganib ng Wikang Senyas ng Pilipino [After four decades: a review of the status of FSL endangerment].}},
