update forthc. publication libby

--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -1,10 +1,9 @@
-@article{Notarte:forthcoming,
-  author = {Notarte Balanquit, Liberty},
-  title = {Probabilities of Lexicalization: phonological change in Filipino Sign Language cardinal numerals},
-  journal = {(2 ed.) Penn Working Papers in Linguistics},
-  publisher = Graduate Linguistics Society (GradLingS)
-  year = {forthcoming},
-  note = {Forthcoming}
+@inproceedings{Notarte:forthcoming,
+    author =    {Notarte Balanquit, Liberty},
+    year =      {Forthc.},
+    title =     {Probabilities of Lexicalization: phonological change in Filipino Sign Language cardinal numerals},
+    booktitle = {(2 ed.) Penn Working Papers in Linguistics},
+    publisher = {Graduate Linguistics Society (GradLingS)}
 }
 
 @inproceedings{Notarte:23,
