added article & dissertation cindy to publications

--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -174,6 +174,29 @@
   In our formalization, we aim to introduce constraints that are maximally modality-independent, using constraint types that have previously been proposed for spoken language reduplication. Our formalization is the first to take into account base-reduplicant faithfulness for a sign language, and also the first to account for variation in sign language data by employing stochastic OT, whereby some noise is added to the ranking value of each constraint at evaluation time. Evaluating the modality-(in)dependence of our proposed account suggests that the types of constraints we employ as well as the evaluation in the spirit of stochastic OT are not specific to a modality, while the featural implementation is inevitably modality-dependent.}
 }
 
+@article{boven:24a,
+url = {https://www.signlab-amsterdam.nl/publications/vanboven24.pdf},
+title = {Aspectual reduplication in Sign Language of the Netherlands: reconsidering phonological constraints and aspectual distinctions},
+author = {van Boven, Cindy},
+journal = {Linguistics},
+doi = {doi:10.1515/ling-2022-0076},
+year = {2024},
+abstract = {This study investigates the use of predicate reduplication to express aspectual meaning in Sign Language of the Netherlands (NGT). The study focuses on three aspect types that have been found to be encoded by reduplication across sign languages – habitual, continuative, and iterative – and addresses potential phonological restrictions. }
+}
+
+@phdthesis{boven:24b,
+  title = {Morphological reduplication in Sign Language of the Netherlands: A typological and theoretical perspective},
+  author = {van Boven, Cindy},
+  year = {2024},
+  publisher = {Netherlands Graduate School of Linguistics {(LOT)}},
+  abstract = {SThe topic of this dissertation is morphological reduplication in Sign Language of the Netherlands (Nederlandse Gebarentaal, NGT). Under reduplication, (part
+of) a word or sign is repeated, in order to yield a systematic change in meaning. The present study focuses on three of its functions: nominal pluralization, aspect
+marking, and reciprocal marking. Analysis of naturalistic corpus data is combined with data elicitation. Beyond offering a description of NGT reduplication, this book presents a
+typological perspective on the phenomenon. The dissertation also presents a theoretical perspective by offering a
+formalization of the results in stochastic Optimality Theory (OT).},
+  url = {https://dare.uva.nl/search?identifier=0f34e615-6f5e-4146-96d5-b323fa5bfc1b}
+}
+
 @inproceedings{khristoforova:21,
   title = {Question-answer pairs in Russian Sign Language: a corpus study},
   author = {Khristoforova, Evgeniia and Kimmelman, Vadim},
