added article ZINinNGT to media; corrections in bib

--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -177,7 +177,7 @@
 @article{boven:24a,
 url = {https://www.signlab-amsterdam.nl/publications/vanboven24.pdf},
 title = {Aspectual reduplication in Sign Language of the Netherlands: reconsidering phonological constraints and aspectual distinctions},
-author = {van Boven, Cindy},
+author = {Boven, Cindy van},
 journal = {Linguistics},
 doi = {doi:10.1515/ling-2022-0076},
 year = {2024},
@@ -186,10 +186,10 @@ abstract = {This study investigates the use of predicate reduplication to expres
 
 @phdthesis{boven:24b,
   title = {Morphological reduplication in Sign Language of the Netherlands: A typological and theoretical perspective},
-  author = {van Boven, Cindy},
+  author = {Boven, Cindy van},
   year = {2024},
   publisher = {Netherlands Graduate School of Linguistics {(LOT)}},
-  abstract = {SThe topic of this dissertation is morphological reduplication in Sign Language of the Netherlands (Nederlandse Gebarentaal, NGT). Under reduplication, (part
+  abstract = {The topic of this dissertation is morphological reduplication in Sign Language of the Netherlands (Nederlandse Gebarentaal, NGT). Under reduplication, (part
 of) a word or sign is repeated, in order to yield a systematic change in meaning. The present study focuses on three of its functions: nominal pluralization, aspect
 marking, and reciprocal marking. Analysis of naturalistic corpus data is combined with data elicitation. Beyond offering a description of NGT reduplication, this book presents a
 typological perspective on the phenomenon. The dissertation also presents a theoretical perspective by offering a
