update publications (fixed typos)

--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -323,7 +323,7 @@ formalization of the results in stochastic Optimality Theory (OT).},
   author = {Bak, Michelle and Klomp, Ulrika and Heppe, Eline},
   year = {2023},
   journal={Van Horen Zeggen},
-  url = {https://vhz-online.nl/totstandkoming-van-de-nederlandse-functionele-definitie-van-doofblindheid}
+  url = {https://vhz-online.nl/totstandkoming-van-de-nederlandse-functionele-definitie-van-doofblindheid},
   abstract = {Het klinkt vanzelfsprekend: kan je slecht horen? Dan ben je doof of slechthorend. Kan je slecht zien? Dan heb je een visuele beperking. Kan je slecht horen én slecht zien? Dan heb je een beperking in horen én zien, ook wel doofblindheid (a) genoemd. Maar in dit geval is 1 + 1 niet gelijk aan 2; een beperking in horen én zien is méér dan de optelsom van deze verschillende beperkingen. Het is een unieke beperking en verdient een definitie die rekening houdt met de wisselwerking van de individuele beperkingen en die kijkt naar de invloed hiervan op het dagelijks functioneren. Het doel van het Deelkrachtproject Functionele Definitie Doofblindheid is het opstellen van een Nederlandse functionele definitie die gebruikt wordt om de doelgroep te definiëren en om te hanteren in de toeleiding naar doofblind-specifieke zorg.}
 }
 
@@ -350,12 +350,13 @@ future uses of the dataset.}
   booktitle = {Negation in the languages of the world},
   publisher = {Language Science Press},
   year = {Forthc.},
-  location = {Berlin}
+  location = {Berlin},
   editor = {L. Veselinova and M. Miestamo},
   url = {https://www.signlab-amsterdam.nl/publications/Klomp-Oomen-Pfau-accepted-manuscript-Negation-in-NGT.pdf},
   abstract = {This chapter addresses negation in Sign Language of the Netherlands, a language in the visual-spatial modality. Throughout this chapter, we will address several aspects of negation that are modality-independent, such as the occurrence of negative particles, but also pay attention to structures that are particular for sign languages, such as the simultaneous use of grammatical non-manual markers. In the
 introduction, we provide some information on Sign Language of the Netherlands (NGT) in general, and we briefly go into our methodology. Then we continue to describe properties of negation in NGT step by step, based on previous research, but also by providing new data on phenomena that have, until now, not received much attention within the field of sign language linguistics, such as negative transport.}
 }
+
 @article{lint:20,
   title = {From meaning to form and back in American Sign Language verbal classifier morphemes},
   author = {Lint, Vanja de},
@@ -421,6 +422,7 @@ of the next lexical entry, (ii) start a new recording, and (iii) approve/disappr
 approved recordings immediately become visible in the signCollect database, so that other members of the team can add metadata. With feedback from workshop participants we intend to further optimize the signCollect platform and
 make it available as an open-source tool for all sign language research teams.}
 }
+
 @book{pfau:21a,
   title = {Our Lives--Our Stories: Life Experiences of Elderly Deaf People},
   author = {Pfau, Roland and G{\"o}ksel, Asli and Hosemann, Jana},
