--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -8,8 +8,8 @@ abstract={Sign Language Processing (SLP) provides the foundation for a more incl
 }
 
 @InProceedings{ranum-EtAl:2024:signlang,
-  author    = {Ranum, Oline A.  and  Otterspeer, GomÃ¨r  and  Andersen, Jari I.  and  Belleman, Robert G.  and  Roelofsen, Floris},
-  title     = {3D-LEX v1.0 â€“ 3D Lexicons for American Sign Language and Sign Language of the Netherlands},
+  author    = {Ranum, Oline  and  Otterspeer, Gom{\`e}r  and  Andersen, Jari  and  Belleman, Robert  and  Roelofsen, Floris},
+  title     = {3D-LEX v1.0 - 3D Lexicons for American Sign Language and Sign Language of the Netherlands},
   booktitle      = {Proceedings of the {LREC-COLING} 2024 11th Workshop on the Representation and Processing of Sign Languages: Evaluation of Sign Language Resources},
   month          = {May},
   year           = {2024},
