--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -62,6 +62,23 @@ abstract={Sign Language Processing (SLP) provides the foundation for a more incl
     publisher = {Graduate Linguistics Society (GradLingS)}
 }
 
+
+@article{backus2023minds,
+  title={Minds: Big questions for linguistics in the age of AI},
+  author={Backus, Ad and Cohen, Michael and Cohn, Neil and Faber, 
+  Myrthe and Krahmer, Emiel and Laparle, Schuyler and Maier, Emar 
+  and van Miltenburg, Emiel and Roelofsen, Floris and Sciubba, Eleonora 
+  and Scholman, Merel and Dimitar Shterionov and Maureen Sie
+  and Frédéric Tomas and Eva Vanmassenhove and Noortje Venhuizen
+  and Connie de Vos4},
+  journal={Linguistics in the Netherlands},
+  volume={40},
+  number={1},
+  pages={301--308},
+  year={2023},
+  publisher={John Benjamins Publishing Company Amsterdam/Philadelphia}
+}
+
 @inproceedings{Notarte:23,
   author = {Notarte Balanquit, Liberty and Dagani, Carolyn B. and Martinez, Liza L.},
   title = {{Matapos ang Apat na Dekada: Muling pagsipat sa panganganib ng Wikang Senyas ng Pilipino [After four decades: a review of the status of FSL endangerment].}},
