--- a/bib/signlab.bib
+++ b/bib/signlab.bib
@@ -65,9 +65,9 @@ abstract={Sign Language Processing (SLP) provides the foundation for a more incl
 
 @article{backus2023minds,
   title={Minds: Big questions for linguistics in the age of AI},
-  author={Backus, Ad and Cohen, Michael and Cohn, Neil and Faber, 
-  Myrthe and Krahmer, Emiel and Laparle, Schuyler and Maier, Emar 
-  and van Miltenburg, Emiel and Roelofsen, Floris and Sciubba, Eleonora 
+  author={Backus, Ad and Cohen, Michael and Cohn, Neil and Faber,
+  Myrthe and Krahmer, Emiel and Laparle, Schuyler and Maier, Emar
+  and van Miltenburg, Emiel and Roelofsen, Floris and Sciubba, Eleonora
   and Scholman, Merel and Dimitar Shterionov and Maureen Sie
   and Frédéric Tomas and Eva Vanmassenhove and Noortje Venhuizen
   and Connie de Vos4},
@@ -696,6 +696,49 @@ make it available as an open-source tool for all sign language research teams.}
   keywords = {bachelorsthesis},
   abstract = {In agent-backgrounding constructions the causer of a linguistic event is pushed out of the focus, that is, it is backgrounded. In this thesis, for the first time, agent-backgrounding strategies were researched in Sign Language of the Netherlands (NGT). This is a corpus-based investigation on impersonalisation strategies such as impersonal uses of personal pronouns (ex. you), dedicated referentially deficient pronouns (ex. someone), and valency-reducing operations (ex. passive constructions). The results confirm that many of the same strategies are used in NGT as in other spoken and sign languages. These findings are highly relevant, as agent-backgrounding has not previously been researched in NGT, so our study fiills an important gap in the literature.},
   note = {Bachelor's thesis, University of Amsterdam.}
+}
+
+@mastersthesis{vanengelen:24,
+  title = {The Structural Properties, Use and Variation of Constructed Action in Sign Language of the Netherlands},
+  author = {Van Engelen, Merel},
+  school = {University of Amsterdam},
+  year = {2024}
+}
+
+@mastersthesis{gilchrist:24,
+  title = {Standardisation and Lexical Preferences in the Deaf Community of the Netherlands},
+  author = {Gilchrist, Shane},
+  school = {University of Amsterdam},
+  year = {2024},
+  url = {https://scripties.uba.uva.nl/search?id=c11101761}
+}
+
+@bachelorsthesis{levestone:24,
+  title = {Comprehension of Relative Clauses in Sign Language of the Netherlands: The Role of Iconicity},
+  author = {Levestone, Rolland},
+  school = {University of Amsterdam},
+  year = {2024}
+}
+
+@bachelorsthesis{liesveld:24,
+  title = {Lexical Modifications in Child-directed Signing in Sign Language of the Netherlands},
+  author = {Liesveld, Simone},
+  school = {University of Amsterdam},
+  year = {2024}
+}
+
+@bachelorsthesis{ribeiro:24,
+  title = {A Lexical Comparison between Cena, Libras and NGT},
+  author = {Ribeiro Rossetti, Leticia},
+  school = {University of Amsterdam},
+  year = {2024}
+}
+
+@bachelorsthesis{deroo:24,
+  title = {Familiarity and Iconicity in Lexical Sign in NGT},
+  author = {De Roo, Esmée},
+  school = {University of Amsterdam},
+  year = {2024}
 }
 
 @mastersthesis{vachaudez:23,
